--- a/src/cookbookCV/cookbookCV/Base.lproj/LaunchScreen.storyboard
+++ b/src/cookbookCV/cookbookCV/Base.lproj/LaunchScreen.storyboard
@@ -15,12 +15,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cookbookCV.png" translatesAutoresizingMaskIntoConstraints="NO" id="qcd-1Z-HJE">
-                                <rect key="frame" x="0.0" y="316" width="414" height="263"/>
-                                <autoresizingMask key="autoresizingMask"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cookbookCV 2.png" translatesAutoresizingMaskIntoConstraints="NO" id="Qr6-mf-HBB">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -30,6 +30,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="cookbookCV.png" width="623" height="270"/>
+        <image name="cookbookCV 2.png" width="623" height="270"/>
     </resources>
 </document>
